--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,25 +12,42 @@ body {
   padding: 0;
 }
 
+body {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
 .swiper {
-  width: 100%;
-  height: 100%;
+  width: 350px;
+  height: 280px;
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.swiper-slide:nth-child(1n) {
+  background-color: rgb(238,238,238);
+}
+
+.swiper-slide:nth-child(2n) {
+  background-color: rgb(238,238,238);
+}
+
+.swiper-slide:nth-child(3n) {
+  background-color: rgb(238,238,238);
+}
+
+.swiper-slide:nth-child(4n) {
+  background-color: rgb(238,238,238);
 }
 
 .mask {
