--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -56,7 +56,7 @@
 
 <!--SWIPER-->
 <section class="container-fluid mb-9 shadow-lg" id="header"
-         style="background: linear-gradient(0deg, rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)), url(static/images/bg1.jpg);
+         style="background: linear-gradient(0deg, rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)), url({% static 'images/bg1.jpg' %});
         height: 400px;
         background-position: 0% 90%;
         background-size: 150vh;
@@ -188,10 +188,7 @@
                     <span>{% translate 'Best experience' %}</span>
                 </div>
                 <p data-aos="fade-up" class="text-muted">
-                    Ut pretium ultricies dignissim. Sed sit amet mi eget urna
-                    placerat vulputate. Ut
-                    vulputate est non quam
-                    dignissim elementum. Donec a ullamcorper diam.</p>
+                    text text text text text text text text text text text text text text text text text text text text</p>
                 <button data-aos="fade-up" class="btn btn-success btn-animate px-3">
                         <span>More
                             <i class="fas fa-train ms-1"></i>
@@ -393,7 +390,7 @@
     <div class="row gx-lg-5 align-items-center">
         <div class="col-lg-5 mb-5 mb-lg-0">
             <div data-aos="fade-right" data-aos-duration="1000" class="bg-image rounded-5 shadow-lg"
-                 style="background-image: url(static/images/D75_4995.jpg); height: 560px; background-size: cover; background-position: 50% 50%;">
+                 style="background-image: url({% static 'images/D75_4995.jpg' %}); height: 560px; background-size: cover; background-position: 50% 50%;">
                 <div data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" class="mask1"
                      style="background-color: rgba(0, 0, 0, 0.5)">
                     <div class="d-flex justify-content-center align-items-center">
@@ -464,7 +461,6 @@
     </h2>
     <div class="row gx-lg-5">
         <div data-aos="fade-up" class="col-6 col-xl-3 col-md-4">
-            {% static 'images/clients/p9.png' %}
             <img src="{% static 'images/clients/nzf-logo.png' %}"
                  class="rounded-circle shadow mb-3 px-3 py-1 bg-primary" alt=""
                  style="width: auto; height: 60px">
