--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -44,8 +44,8 @@
     <div class="container-fluid shadow-lg">
         <div data-aos="fade-right" class="col-2">
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">
-                <img class="im-fluid mx-auto" src="{% static 'images/logo.png' %}" alt="" style="max-width: 70px">
+            <a class="navbar-brand" href="/">
+                <img class="im-fluid mx-auto btn-animate" draggable="false" src="{% static 'images/logo.png' %}" alt="" style="max-width: 70px">
             </a>
         </div>
         <div class="col-8 text-center">
@@ -61,10 +61,10 @@
                 <ul class="navbar-nav">
                     <!-- Link -->
                     <li class="nav-item btn-animate" data-mdb-ripple-color="red">
-                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="#">{% translate 'Main' %}</a>
+                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="/">{% translate 'Main' %}</a>
                     </li>
                     <li class="nav-item btn-animate">
-                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="#">{% translate 'About us' %}</a>
+                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="/#about_us">{% translate 'About us' %}</a>
                     </li>
                     <!-- Dropdown -->
                     <li class="nav-item dropdown mx-auto">
@@ -77,29 +77,29 @@
                         <!-- Dropdown menu -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="#">{% translate 'Badges / Pads' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="badges&Pads">{% translate 'Badges / Pads' %}</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider border border-primary"/>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="#">{% translate 'Iron Valves' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Iron Valves' %}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="#">{% translate 'Gates' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Gates' %}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="#">{% translate 'Plungers' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="primary" href="piping">{% translate 'Plungers' %}</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider border border-danger"/>
                             </li>
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="danger" href="#">{% translate 'Iron Casting' %}</a>
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="danger" href="iron_casting">{% translate 'Iron Casting' %}</a>
                             </li>
                         </ul>
                     </li>
                     <li data-aos="fade-right" class="nav-item">
-                        <a class="nav-link btn-animate" href="#">{% translate 'Contacts' %}</a>
+                        <a class="nav-link btn-animate" href="#contacts">{% translate 'Contacts' %}</a>
                     </li>
                 </ul>
             </div>
@@ -111,6 +111,7 @@
                 <li class="nav-item dropdown mx-auto">
                     <a
                             class="nav-link dropdown-toggle btn-animate"
+                            data-aos="flip-right"
                             href="#"
                             id="languageDropdown"
                             role="button"
@@ -155,7 +156,37 @@
     </div>
 </nav>
 <!-- End navbar -->
+<div class="mask">
+    <div class="loader">
+        <svg viewBox="0 0 80 80">
+            <circle id="test" cx="40" cy="40" r="32"></circle>
+        </svg>
+    </div>
 
+    <div class="loader triangle">
+        <svg viewBox="0 0 86 80">
+            <polygon points="43 8 79 72 7 72"></polygon>
+        </svg>
+    </div>
+
+    <div class="loader">
+        <svg viewBox="0 0 80 80">
+            <rect x="8" y="8" width="64" height="64"></rect>
+        </svg>
+    </div>
+</div>
+<!--JS SPINNER-->
+<script src="{% static 'js/spinner.js' %}"></script>
+<!--LOADING SPINNER END-->
+
+<!--button up-->
+<a id="scrollToTopButton" class="fs-3 shadow-0 mx-2 btn-rounded text-primary btn-animate"
+   style="position: fixed; bottom: 50px; right: 40px; display: none; z-index: 100"
+   href="#header">
+    <i class="fas fa-arrow-up-long fa-2x" ></i>
+</a>
+<script src="{% static 'js/button_up.js' %}"></script>
+<!--button end-->
 
 <!--Write each new template not with DOCTYPE but with a BODY tag-->
 <!--Content block-->
@@ -165,6 +196,80 @@
 
 <!--footer on every page-->
 <!--FOOTER-->
+
+<!--CONTACT US-->
+<!--г. Никополь, ул.Электрометаллургов, 300 – новая площадка (литейный цех)-->
+<section class="container my-5" id="contacts">
+    <h2 class="fw-bold text-center my-5">
+        <u class="text-primary">Contact</u>
+        <span>Us</span>
+    </h2>
+    <div class="card mb-3">
+        <div class="row g-0 d-flex align-items-center">
+            <div class="col-lg-4 d-none d-lg-flex">
+                <!--                GOOGLE MAP ENGLISH-->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2690.60915931269!2d34.3780783!3d47.59484369999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dca3cfff35358f%3A0x65128b98055957f!2sElektrometalurhiv%20St%2C%20300%2C%20Nikopol&#39;%2C%20Dnipropetrovs&#39;ka%20oblast%2C%20Ukraine%2C%2053200!5e0!3m2!1sen!2skz!4v1694529900527!5m2!1sen!2skz"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col-lg-8">
+                <div class="card-body py-5 px-md-5">
+                    <div class="row gx-lg-5">
+                        <div class="col-md-6 mb-5">
+                            <div class="d-flex align-items-start">
+                                <div class="flex-shrink-0">
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
+                                            class="fas fa-headset fa-lg text-white fa-fw"></i></div>
+                                </div>
+                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
+                                    Technical support</p>
+                                    <p class="text-muted mb-0">support@example.com</p>
+                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-5">
+                            <div class="d-flex align-items-start">
+                                <div class="flex-shrink-0">
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
+                                            class="fas fa-dollar-sign fa-lg text-white fa-fw"></i></div>
+                                </div>
+                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
+                                    Sales questions</p>
+                                    <p class="text-muted mb-0">sales@example.com</p>
+                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-5">
+                            <div class="d-flex align-items-start">
+                                <div class="flex-shrink-0">
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
+                                            class="fas fa-newspaper fa-lg text-white fa-fw"></i></div>
+                                </div>
+                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
+                                    Press</p>
+                                    <p class="text-muted mb-0">press@example.com</p>
+                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-5">
+                            <div class="d-flex align-items-start">
+                                <div class="flex-shrink-0">
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
+                                            class="fas fa-bug fa-lg text-white fa-fw"></i></div>
+                                </div>
+                                <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
+                                    Bug report</p>
+                                    <p class="text-muted mb-0">bugs@example.com</p>
+                                    <p class="text-muted mb-0">+1 234-567-89</p></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--CONTACT US END-->
 <footer>
     <div class="container-fluid bg-primary">
         <div class="container py-1">
