--- a/content/templates/content/product_piping.html
+++ b/content/templates/content/product_piping.html
@@ -17,7 +17,7 @@
 <!--your content block here-->
 {% block content %}
 
-<body>
+<body style="background: rgba(238,238,245,1)">
 <div class="container-fluid text-center mt-5">
     <img draggable="false" src="{% static 'images/pipe.png' %}" alt="" class="img-fluid">
 </div>
