--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -1,8 +1,7 @@
+<!DOCTYPE html>
 <!--load tags-->
 {% load static %}
 {% load i18n %}
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
@@ -39,7 +38,7 @@
 
 <!--header on every page-->
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg py-1 bg-light bg-gradient sticky-top">
+<nav class="navbar navbar-expand-lg py-1 bg-light bg-gradient sticky-top" id="header">
     <!-- Container wrapper -->
     <div class="container-fluid shadow-lg">
         <div data-aos="fade-right" class="col-2">
