--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -21,7 +21,7 @@
       style="font-family: 'Roboto'; background: linear-gradient(0deg, rgba(238,238,238,1) 0%, rgba(245,238,238,1) 45%, rgba(238,238,245,1) 60%, rgba(238,245,238,1) 65%, rgba(238,238,238,1) 100%)">
 
 <!--SWIPER-->
-<section class="container-fluid mb-9 shadow-lg" id="header"
+<section class="container-fluid mb-9 shadow-lg"
          style="background: linear-gradient(0deg, rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)), url({% static 'images/bg1.jpg' %});
         height: 400px;
         background-position: 0% 90%;
