--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -38,7 +38,7 @@
 
 <!--header on every page-->
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg py-1 bg-light bg-gradient sticky-top" id="header">
+<nav class="navbar navbar-expand-lg py-1 bg-light bg-gradient sticky-top">
     <!-- Container wrapper -->
     <div class="container-fluid shadow-lg">
         <div data-aos="fade-right" class="col-2">
