--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -17,15 +17,15 @@
 <!--your content block here-->
 {% block content %}
 
-<body style="background: rgba(238,245,238,1)">
+<body style="background: rgba(238,245,238,1)" id="header">
 <!--OUR PRODUCTS KEY-->
 
 <section>
     <div class="container">
         <div class="container-fluid text-center">
-            <img data-aos="fade-left" draggable="false" src="{% static 'images/585f9208cb11b227491c357a.png' %}"
+            <img data-aos="fade-right" draggable="false" src="{% static 'images/585f9208cb11b227491c357a.png' %}"
                  alt=""
-                 class="img-fluid w-25 rounded my-0 py-0" style="">
+                 class="img-fluid rounded my-0 py-0" style="max-width: 300px">
         </div>
     </div>
 </section>
@@ -38,10 +38,10 @@
     <div class="row wow fadeIn">
 
         <!--Grid column-->
-        <div class="col-md-4 mx-auto my-auto">
+        <div class="col-md-4 mx-auto my-0">
 
             <div data-aos="fade-right"
-                 class="bg-image hover-zoom ripple rounded-4 text-center py-3"
+                 class="bg-image hover-zoom ripple rounded-4 text-center"
                  data-mdb-ripple-color="light">
                 <img data-aos-delay="200" draggable="false"
                      src="{% static 'images/new_photos/Wedge-removebg-preview.png' %}"
@@ -60,7 +60,7 @@
         <div class="col-md-8">
 
             <!--Content-->
-            <div class="p-4">
+            <div class="">
 
                 <div class="mb-3">
                     <a href="#">
@@ -133,12 +133,6 @@
                             sint voluptatibus!
                             Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
 
-                        <a class="d-flex justify-content-left" href="#">
-                            <!-- Default input -->
-                            <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
-                                <i class="fas fa-shopping-cart ml-1"></i>
-                            </button>
-                        </a>
                     </div>
                     <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
                         <h2>Name 2</h2>
@@ -151,12 +145,6 @@
                             sint voluptatibus!
                             Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
 
-                        <a class="d-flex justify-content-left" href="#">
-                            <!-- Default input -->
-                            <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
-                                <i class="fas fa-shopping-cart ml-1"></i>
-                            </button>
-                        </a>
                     </div>
                     <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
                         <h2>Name 3</h2>
@@ -169,13 +157,14 @@
                             sint voluptatibus!
                             Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
 
-                        <a class="d-flex justify-content-left" href="#">
-                            <!-- Default input -->
-                            <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
-                                <i class="fas fa-shopping-cart ml-1"></i>
-                            </button>
-                        </a>
+
                     </div>
+                    <a class="d-flex justify-content-center" href="#">
+                        <!-- Default input -->
+                        <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
+                            <i class="fas fa-shopping-cart ml-1"></i>
+                        </button>
+                    </a>
                 </div>
                 <!-- Tabs content -->
 
@@ -194,9 +183,9 @@
     <!--Grid row-->
     <div class="row wow fadeIn">
         <!--Grid column-->
-        <div class="col-md-4 mb-4 mx-auto my-auto">
+        <div class="col-md-4 mb-4 mx-auto my-0">
             <div data-aos="fade-right"
-                 class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3"
+                 class="bg-image hover-zoom ripple rounded-4 text-center"
                  data-mdb-ripple-color="light">
                 <img data-aos-delay="200" draggable="false"
                      src="{% static 'images/new_photos/03KTM-removebg-preview.png' %}"
@@ -218,7 +207,7 @@
         <!--Grid column-->
         <div class="col-md-8 mb-4">
             <!--Content-->
-            <div class="p-4">
+            <div class="">
                 <div class="mb-3">
                     <a href="#">
                         <span class="badge badge-success mr-1">Railways</span>
@@ -342,11 +331,11 @@
 
                     </div>
                     <a class="d-flex justify-content-left" href="#">
-                            <!-- Default input -->
-                            <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
-                                <i class="fas fa-shopping-cart ml-1"></i>
-                            </button>
-                        </a>
+                        <!-- Default input -->
+                        <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
+                            <i class="fas fa-shopping-cart ml-1"></i>
+                        </button>
+                    </a>
                 </div>
                 <!-- Tabs content -->
 
@@ -367,10 +356,10 @@
     <div class="row wow fadeIn">
 
         <!--Grid column-->
-        <div class="col-md-4 mb-4 mx-auto my-auto">
+        <div class="col-md-4 mx-auto my-0">
 
             <div data-aos="fade-right"
-                 class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3"
+                 class="bg-image hover-zoom ripple rounded-4 text-center"
                  data-mdb-ripple-color="light">
                 <img data-aos-delay="200" draggable="false"
                      src="{% static 'images/new_photos/Anker-removebg-preview.png' %}"
@@ -386,10 +375,10 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-md-8 mb-4">
+        <div class="col-md-8">
 
             <!--Content-->
-            <div class="p-4">
+            <div class="">
 
                 <div class="mb-3">
                     <a href="#">
@@ -491,11 +480,11 @@
 
                     </div>
                     <a class="d-flex justify-content-left" href="#">
-                            <!-- Default input -->
-                            <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
-                                <i class="fas fa-shopping-cart ml-1"></i>
-                            </button>
-                        </a>
+                        <!-- Default input -->
+                        <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Get an offer
+                            <i class="fas fa-shopping-cart ml-1"></i>
+                        </button>
+                    </a>
                 </div>
                 <!-- Tabs content -->
 
@@ -536,33 +525,35 @@
         <!--Grid column-->
         <div class="col-12 col-md-6 text-center">
 
-            <div data-aos="fade-right"
-                 class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3 "
+            <div class="bg-image ripple rounded-4 mb-4 text-center py-3 "
                  data-mdb-ripple-color="primary">
-                <img draggable="false" src="{% static 'images/zatvor-19ch16br.png' %}" class="my-auto pt-3 me-3 btn-animate" alt="">
-                <img draggable="false" src="{% static 'images/zatvor-19ch21br.png' %}" class="pt-3 me-3 btn-animate" alt="">
-                <img draggable="false" src="{% static 'images/prod1.png' %}" class="img me-3 btn-animate" alt="">
-                <img draggable="false" src="{% static 'images/vantuz1.png' %}" class="mt-3 btn-animate" alt="">
+                <img data-aos="zoom-in-right" data-aos-delay="150" draggable="false" src="{% static 'images/zatvor-19ch16br.png' %}"
+                     class="my-auto pt-3 me-3 btn-animate" alt="">
+                <img data-aos="zoom-in-right" data-aos-delay="100" draggable="false" src="{% static 'images/zatvor-19ch21br.png' %}" class="pt-3 me-3 btn-animate"
+                     alt="">
+                <img data-aos="zoom-in-right" data-aos-delay="50" draggable="false" src="{% static 'images/prod1.png' %}" class="img me-3 btn-animate" alt="">
+                <img data-aos="zoom-in-right" draggable="false" src="{% static 'images/vantuz1.png' %}" class="mt-3 btn-animate" alt="">
             </div>
             <a href="piping">
-                <button class="btn btn-primary btn-animate">See more</button>
+                <button data-aos="fade-up" class="btn btn-primary btn-animate">See more</button>
             </a>
         </div>
         <!--Grid column-->
 
         <!--Grid column-->
         <div class="col-12 col-md-6 text-center">
-            <div data-aos="fade-right"
-                 class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3 "
+            <div class="bg-image ripple rounded-4 mb-4 text-center py-3 "
                  data-mdb-ripple-color="danger">
-                <img src="{% static 'images/dozhdepriemnik.png' %}" alt="" class="btn-animate" style="max-height: 120px">
-                <img src="{% static 'images/livnevka.png' %}" alt="" class="btn-animate" style="max-height: 120px">
-                <img src="{% static 'images/prod4.png' %}" alt="" class="btn-animate" style="max-height: 120px">
-                <img src="{% static 'images/LYUKI-.png' %}" alt="" class="my-3 btn-animate" style="max-height: 120px">
-                <img src="{% static 'images/Lyuk-kvadrat2.png' %}" class="my-3 mx-3 btn-animate" alt="" style="max-height: 120px">
+                <img draggable="false" data-aos="zoom-in-right" src="{% static 'images/dozhdepriemnik.png' %}" alt="" class="btn-animate"
+                     style="max-height: 120px">
+                <img draggable="false" data-aos="zoom-in-right" data-aos-delay="100" src="{% static 'images/livnevka.png' %}" alt="" class="btn-animate" style="max-height: 120px">
+                <img draggable="false" data-aos="zoom-in-right" data-aos-delay="200" src="{% static 'images/prod4.png' %}" alt="" class="btn-animate" style="max-height: 120px">
+                <img draggable="false" data-aos="zoom-in-right" src="{% static 'images/LYUKI-.png' %}" alt="" class="my-3 btn-animate" style="max-height: 120px">
+                <img draggable="false" data-aos="zoom-in-right" data-aos-delay="100" src="{% static 'images/Lyuk-kvadrat2.png' %}" class="my-3 mx-3 btn-animate" alt=""
+                     style="max-height: 120px">
             </div>
             <a href="iron_casting">
-                <button class="btn btn-danger btn-animate">See more</button>
+                <button data-aos="fade-up" class="btn btn-danger btn-animate">See more</button>
             </a>
         </div>
         <!--Grid column-->
