--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -23,7 +23,7 @@
 <section>
     <div class="container">
         <div class="container-fluid text-center">
-            <img data-aos="fade-right" draggable="false" src="{% static 'images/585f9208cb11b227491c357a.png' %}"
+            <img data-aos="fade-right" draggable="false" src="{% static 'images/rw/train.png' %}"
                  alt=""
                  class="img-fluid rounded my-0 py-0" style="max-width: 300px">
         </div>
