--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -133,20 +133,20 @@
                         </li>
                         <li>
                             <a class="dropdown-item " href="{% url 'index:set_language' 'ru' %}"><i
-                                    class="flag-russia flag "></i>Русский</a>
+                                    class="flag-russia flag"></i>Русский</a>
                         </li>
                         <li>
-                            <a class="dropdown-item " href="#"><i class="flag-ukraine flag"></i>Український</a>
+                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-ukraine flag"></i>Український</a>
                         </li>
                         <li>
-                            <a class="dropdown-item " href="#"><i class="flag-germany flag"></i>Deutsch</a>
+                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-germany flag"></i>Deutsch</a>
                         </li>
                         <li>
-                            <a class="dropdown-item " href="#"><i class="flag-romania flag"></i>Română</a>
+                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-romania flag"></i>Română</a>
 
                         </li>
                         <li>
-                            <a class="dropdown-item " href="#"><i class="flag-poland flag"></i>Polski</a>
+                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-poland flag"></i>Polski</a>
                         </li>
                     </ul>
                 </li>
