--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -202,8 +202,8 @@
             <div data-aos="fade-right"
                  class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3 btn-animate"
                  data-mdb-ripple-color="primary" style="height: 265px">
-                <img draggable="false" src="{% static 'images/zatvor-19ch16br.png' %}" class="mt-5 pt-3 me-3" alt="">
-                <img draggable="false" src="{% static 'images/zatvor-19ch21br.png' %}" class="mt-5 pt-3" alt="">
+                <img draggable="false" src="{% static 'images/piping/zatvor-19ch16br.png' %}" class="mt-5 pt-3 me-3" alt="">
+                <img draggable="false" src="{% static 'images/piping/zatvor-19ch21br.png' %}" class="mt-5 pt-3" alt="">
             </div>
             <h5 data-aos="fade-right" class="fw-bold">{% translate ' Gates' %}</h5>
             <div class="mb-3 text-primary small">
@@ -226,7 +226,7 @@
                 <div data-aos="fade-right"
                      class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3 btn-animate"
                      data-mdb-ripple-color="primary" style="height: 265px">
-                    <img draggable="false" src="{% static 'images/prod1.png' %}" class="img" alt="">
+                    <img draggable="false" src="{% static 'images/piping/prod1.png' %}" class="img" alt="">
                 </div>
                 <h5 data-aos="fade-right" class="fw-bold">
                     Cast iron valves</h5>
@@ -249,7 +249,7 @@
             <div>
                 <div data-aos="fade-right" class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3 btn-animate"
                      data-mdb-ripple-color="primary" style="height: 265px">
-                    <img draggable="false" src="{% static 'images/vantuz1.png' %}" class="mt-4" alt="">
+                    <img draggable="false" src="{% static 'images/piping/vantuz1.png' %}" class="mt-4" alt="">
                 </div>
                 <h5 data-aos="fade-right" class="fw-bold mb-3"> Plungers</h5>
                 <div class="mb-3 text-warning small mx-auto">
