--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -527,11 +527,11 @@
 
             <div class="bg-image ripple rounded-4 mb-4 text-center py-3 "
                  data-mdb-ripple-color="primary">
-                <img data-aos="zoom-in-right" data-aos-delay="150" draggable="false" src="{% static 'images/zatvor-19ch16br.png' %}"
+                <img data-aos="zoom-in-right" data-aos-delay="150" draggable="false" src="{% static 'images/piping/zatvor-19ch16br.png' %}"
                      class="my-auto pt-3 me-3 btn-animate" alt="">
-                <img data-aos="zoom-in-right" data-aos-delay="100" draggable="false" src="{% static 'images/zatvor-19ch21br.png' %}" class="pt-3 me-3 btn-animate"
+                <img data-aos="zoom-in-right" data-aos-delay="100" draggable="false" src="{% static 'images/piping/zatvor-19ch21br.png' %}" class="pt-3 me-3 btn-animate"
                      alt="">
-                <img data-aos="zoom-in-right" data-aos-delay="50" draggable="false" src="{% static 'images/prod1.png' %}" class="img me-3 btn-animate" alt="">
+                <img data-aos="zoom-in-right" data-aos-delay="50" draggable="false" src="{% static 'images/piping/prod1.png' %}" class="img me-3 btn-animate" alt="">
                 <img data-aos="zoom-in-right" draggable="false" src="{% static 'images/vantuz1.png' %}" class="mt-3 btn-animate" alt="">
             </div>
             <a href="piping">
