--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -269,8 +269,8 @@
     </div>
 </section>
 <!--CONTACT US END-->
-<footer>
-    <div class="container-fluid bg-primary">
+<footer class="bg-primary">
+    <div class="container-fluid">
         <div class="container py-1">
             <div class="row">
                 <div class="col-12 text-center text-white my-0 py-0">
