--- a/content/templates/content/product_piping.html
+++ b/content/templates/content/product_piping.html
@@ -902,7 +902,7 @@
 
                 <a data-aos="fade-up" class="d-flex justify-content-center" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get offer
+                    <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get price
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -1414,7 +1414,7 @@
 
             <a data-aos="fade-up" class="d-flex justify-content-center" href="#">
                 <!-- Default input -->
-                <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get offer
+                <button class="btn btn-primary btn-md my-0 p btn-animate" type="button">Get price
                     <i class="fas fa-shopping-cart ml-1"></i>
                 </button>
             </a>
